Remove format filter for util
Now that the new version of stylua is out, a bug with iife is fixed, so
we don't need to ignore util.lua anymore

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,4 +34,4 @@ jobs:
 
     - name: Run StyLua
       run: |
-        stylua -g **/*.lua -g !util.lua --check -- lua
+        stylua -g **/*.lua --check -- lua
