--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: nvim-metals ci
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
 
 jobs:
@@ -30,7 +30,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Setup StyLua
       run: |
-        cargo install --version 0.9.0 stylua
+        cargo install --version 0.9.3 stylua
 
     - name: Run StyLua
       run: |
