--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,23 +41,64 @@ jobs:
 
   test:
     name: Run tests
+    strategy:
+      matrix:
+        neovim_branch: ['v0.5.0', 'master']
     runs-on: ubuntu-latest
+    env:
+      NEOVIM_BRANCH: ${{ matrix.neovim_branch }}
 
     steps:
       - uses: actions/checkout@v2
-      - run: date +%F > todays-date
-      - name: Restore cache for today's nightly.
-        uses: actions/cache@v2
+
+      - uses: coursier/setup-action@v1
         with:
-          path: _neovim
-          key: ${{ runner.os }}-x64-${{ hashFiles('todays-date') }}
+          jvm: adopt:11
+
+      # Copied/adapted from wbthomason/packer.nvim
+      - name: Setup build dependencies
+        run: |
+          sudo apt update &&
+          sudo apt install -y \
+            autoconf \
+            automake \
+            cmake \
+            g++ \
+            gettext \
+            gperf \
+            libjemalloc-dev \
+            libluajit-5.1-dev \
+            libmsgpack-dev \
+            libtermkey-dev \
+            libtool \
+            libtool-bin \
+            libunibilium-dev \
+            libvterm-dev \
+            lua-bitop \
+            lua-lpeg \
+            lua-mpack \
+            ninja-build \
+            pkg-config \
+            unzip
+
+      - name: Build Neovim
+        run: |
+          git clone --depth 1 https://github.com/neovim/neovim --branch ${{env.NEOVIM_BRANCH}}
+          make -C neovim
 
       - name: Prepare plenary
         run: |
           git clone --depth 1 https://github.com/nvim-lua/plenary.nvim ~/.local/share/nvim/site/pack/vendor/start/plenary.nvim
           ln -s $(pwd) ~/.local/share/nvim/site/pack/vendor/start
+
+      - name: Run setup tests
+        run: |
+          export PATH="neovim/build/bin:${PATH}"
+          export VIM="neovim/runtime"
+          make test-setup
+
       - name: Run tests
         run: |
-          curl -OL https://raw.githubusercontent.com/norcalli/bot-ci/master/scripts/github-actions-setup.sh
-          source github-actions-setup.sh nightly-x64
+          export PATH="neovim/build/bin:${PATH}"
+          export VIM="neovim/runtime"
           make test
