--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,15 +16,22 @@ jobs:
     - name: Checkout sources
       uses: actions/checkout@v3
 
-    - name: Setup luacheck
+    - name: Setup selene
       run: |
-        sudo apt update &&
-        sudo apt install -y lua5.1 luarocks &&
-        sudo luarocks install luacheck
+        wget "https://github.com/Kampfkarren/selene/releases/download/$VERSION/selene-$VERSION-linux.zip"
+        echo "$SHA256_CHECKSUM  selene-$VERSION-linux.zip" > "selene-$VERSION-linux.zip.checksum"
+        sha256sum --check "selene-$VERSION-linux.zip.checksum"
+        unzip "selene-$VERSION-linux.zip"
+        install -Dp selene "$HOME/.local/bin/selene"
+        echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-    - name: Run luacheck
-      run: |
-        make lint
+      env:
+        VERSION: "0.16.0"
+        SHA256_CHECKSUM: "a02e93ecba434e10a2731cab0a1d6cb6c26454545fc4174626f9d38ae6000b8b"
+
+    - name: Run selene
+      run: make lint
+
 
   format-check:
     runs-on: ubuntu-latest
