fix: ensure we have green testing
The issue was twofold here:

1. Our usage of plenary in the tests was old and relied on old logic in
   plenary that was actually removed without me realizing it. There was
   no warning since they were _methods and I probably shouldn't have
   used them in the first place
2. The clone inside of actions wasn't working as expected. Instead we
   now utilize the checkout action to nicely get those repos inside of
   here for testing. Much cleaner, faster, and it actually works.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,16 +58,24 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - run: date +%F > todays-date
-      - name: Restore cache for today's nightly.
-        uses: actions/cache@v3.0.5
+      - uses: actions/checkout@v3
         with:
-          path: _neovim
-          key: ${{ runner.os }}-x64-${{ hashFiles('todays-date') }}
+          repository: "ckipp01/multiple-build-file-example"
+          path: "multiple-build-file-example"
+
+      - uses: actions/checkout@v3
+        with:
+          repository: "ckipp01/mill-minimal"
+          path: "mill-minimal"
+
+      - uses: actions/checkout@v3
+        with:
+          repository: "ckipp01/minimal-scala-cli-test"
+          path: "minimal-scala-cli-test"
 
       - uses: coursier/setup-action@v1
         with:
-          jvm: adopt:11
+          jvm: adopt:8
           apps: ""
 
       - name: Setup neovim
