chore(ci): test on adoptium 17

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
 
       - uses: coursier/setup-action@v1
         with:
-          jvm: adopt:8
+          jvm: adoptium:17
           apps: ""
 
       - name: Setup neovim
